this time it is personal.

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://DMWoodall.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: The Internet is here to stay.
+subtitle: Dave Woodalls' technical blog.
+author: Dav Woodall
 simple_search: http://google.com/search
 description:
 
