--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 url: http://DMWoodall.github.com
 title: The Internet is here to stay.
-subtitle: Dave Woodalls' technical blog.
-author: Dav Woodall
+subtitle: Dave Woodall's technical blog.
+author: Dave Woodall
 simple_search: http://google.com/search
 description:
 
@@ -45,7 +45,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html, asides/twitter.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -57,19 +57,20 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 #   3rd Party Settings    #
 # ----------------------- #
 
-# Github repositories
-github_user:
-github_repo_count: 0
-github_show_profile_link: true
-github_skip_forks: true
-
 # Twitter
-twitter_user:
-twitter_tweet_count: 4
+twitter_user: dmwoodall
+twitter_tweet_count: 3
 twitter_show_replies: false
 twitter_follow_button: true
 twitter_show_follower_count: false
 twitter_tweet_button: true
+
+# Github repositories
+github_user: dmwoodall
+github_repo_count: 3
+github_show_profile_link: true
+github_skip_forks: true
+
 
 # Google +1
 google_plus_one: false
